--- a/TQPGSS_HFT_2023241.Wpfclient/DriverWindow.xaml
+++ b/TQPGSS_HFT_2023241.Wpfclient/DriverWindow.xaml
@@ -3,7 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TQPGSS_HFT_2023241.Wpfclient" xmlns:local1="clr-namespace:TQPGSS_HFT_2023241.Wpfclient.ViewModels"
+        xmlns:local="clr-namespace:TQPGSS_HFT_2023241.Wpfclient" 
+        xmlns:local1="clr-namespace:TQPGSS_HFT_2023241.Wpfclient.ViewModels"
         mc:Ignorable="d"
         Title="DriverWindow" Height="450" Width="800">
     <Window.DataContext>
@@ -14,16 +15,22 @@
             <ColumnDefinition Width="249*"/>
             <ColumnDefinition Width="151*"/>
         </Grid.ColumnDefinitions>
-        <ListBox ItemsSource="{Binding Drivers}">
+        <ListBox ItemsSource="{Binding Drivers}" HorizontalContentAlignment="Stretch" SelectedItem="{Binding SelectedDriver}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <StackPanel>
-                        <Label Content="{Binding Name}" ></Label>
-                        <Label Content="{Binding team}" ></Label>
-                        <Label Content="{Binding Points}" ></Label>
-                    </StackPanel>
+                    <Border BorderThickness="1" BorderBrush="Black">
+                        <StackPanel>
+                            <Label Content="{Binding Name}" ></Label>
+                            <Label Content="{Binding team}" ></Label>
+                            <Label Content="{Binding Points}" ></Label>
+                        </StackPanel>
+                    </Border>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
+        <StackPanel Grid.Column="1">
+            <Button Content="Add Driver" Command="{Binding CreateDriverCommand}" Margin="10" Padding="10"></Button>
+            <Button Content="Delete Driver" Command="{Binding DeleteDriverCommand}" Margin="10" Padding="10"></Button>
+        </StackPanel>
     </Grid>
 </Window>
