--- a/TQPGSS_HFT_2023241.Wpfclient/GrandPrixWindow.xaml
+++ b/TQPGSS_HFT_2023241.Wpfclient/GrandPrixWindow.xaml
@@ -3,10 +3,33 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TQPGSS_HFT_2023241.Wpfclient"
+        xmlns:local="clr-namespace:TQPGSS_HFT_2023241.Wpfclient" xmlns:local1="clr-namespace:TQPGSS_HFT_2023241.Wpfclient.ViewModels"
         mc:Ignorable="d"
         Title="GrandPrixWindow" Height="450" Width="800">
+    <Window.DataContext>
+        <local1:GrandPrixWindowViewModel/>
+    </Window.DataContext>
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="249*"/>
+            <ColumnDefinition Width="151*"/>
+        </Grid.ColumnDefinitions>
+        <ListBox ItemsSource="{Binding GrandPrixs}" HorizontalContentAlignment="Stretch" SelectedItem="{Binding SelectedGrandPrix}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Border BorderThickness="1" BorderBrush="Black">
+                        <StackPanel>
+                            <Label Content="{Binding Name}" ></Label>
+                            <Label Content="{Binding Date}" ></Label>
+                            <Label Content="{Binding WhoWon}" ></Label>
+                        </StackPanel>
+                    </Border>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        <StackPanel Grid.Column="1">
+            <Button Content="Add GrandPrix" Command="{Binding CreateGrandPrixCommand}" Margin="10" Padding="10"></Button>
+            <Button Content="Delete GrandPrix" Command="{Binding DeleteGrandPrixCommand}" Margin="10" Padding="10"></Button>
+        </StackPanel>
     </Grid>
 </Window>
