--- a/TQPGSS_HFT_2023241.Wpfclient/MainWindow.xaml
+++ b/TQPGSS_HFT_2023241.Wpfclient/MainWindow.xaml
@@ -16,7 +16,7 @@
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
         <Button Command="{Binding driverWindowCommand}" Content="Driver oldal" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center"></Button>
-        <Button Command="{Binding teamWindowCommand}" Grid.Column="1" Content="GrandPrix oldal" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center"></Button>
-        <Button Command="{Binding grandPrixWindowCommand}" Grid.Column="2" Content="Team oldal" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center"></Button>
+        <Button Command="{Binding grandPrixWindowCommand}" Grid.Column="1" Content="GrandPrix oldal" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center"></Button>
+        <Button Command="{Binding teamWindowCommand}" Grid.Column="2" Content="Team oldal" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center"></Button>
     </Grid>
 </Window>
