--- a/TQPGSS_HFT_2023241.Wpfclient/TeamWindow.xaml
+++ b/TQPGSS_HFT_2023241.Wpfclient/TeamWindow.xaml
@@ -4,9 +4,32 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TQPGSS_HFT_2023241.Wpfclient"
+        xmlns:local1="clr-namespace:TQPGSS_HFT_2023241.Wpfclient.ViewModels"
         mc:Ignorable="d"
         Title="TeamWindow" Height="450" Width="800">
+    <Window.DataContext>
+        <local1:TeamWindowViewModel/>
+    </Window.DataContext>
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="249*"/>
+            <ColumnDefinition Width="151*"/>
+        </Grid.ColumnDefinitions>
+        <ListBox ItemsSource="{Binding Teams}" HorizontalContentAlignment="Stretch" SelectedItem="{Binding SelectedTeam}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Border BorderThickness="1" BorderBrush="Black">
+                        <StackPanel>
+                            <Label Content="{Binding Name}" ></Label>
+                            <Label Content="{Binding Points}" ></Label>
+                        </StackPanel>
+                    </Border>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        <StackPanel Grid.Column="1">
+            <Button Content="Add Team" Command="{Binding CreateTeamCommand}" Margin="10" Padding="10"></Button>
+            <Button Content="Delete Team" Command="{Binding DeleteTeamCommand}" Margin="10" Padding="10"></Button>
+        </StackPanel>
     </Grid>
 </Window>
