--- a/TQPGSS_HFT_2023241.Wpfclient/GrandPrixWindow.xaml
+++ b/TQPGSS_HFT_2023241.Wpfclient/GrandPrixWindow.xaml
@@ -28,8 +28,15 @@
             </ListBox.ItemTemplate>
         </ListBox>
         <StackPanel Grid.Column="1">
+            <Label Content="Name: " Background="LightBlue" FontSize="15"></Label>
+            <TextBox Text="{Binding SelectedGrandPrix.Name}" FontSize="15" Margin="0,0,0,10"></TextBox>
+            <Label Content="Date: " Background="LightBlue" FontSize="15"></Label>
+            <TextBox Text="{Binding SelectedGrandPrix.Date}" FontSize="15" Margin="0,0,0,10"></TextBox>
+            <Label Content="Winner: " Background="LightBlue" FontSize="15"></Label>
+            <TextBox Text="{Binding SelectedGrandPrix.WhoWon}" FontSize="15" Margin="0,0,0,10"></TextBox>
             <Button Content="Add GrandPrix" Command="{Binding CreateGrandPrixCommand}" Margin="10" Padding="10"></Button>
             <Button Content="Delete GrandPrix" Command="{Binding DeleteGrandPrixCommand}" Margin="10" Padding="10"></Button>
+            <Button Content="Update GrandPrix" Command="{Binding UpdateGrandPrixCommand}" Margin="10" Padding="10"></Button>
         </StackPanel>
     </Grid>
 </Window>
