--- a/TQPGSS_HFT_2023241.Wpfclient/DriverWindow.xaml
+++ b/TQPGSS_HFT_2023241.Wpfclient/DriverWindow.xaml
@@ -6,13 +6,14 @@
         xmlns:local="clr-namespace:TQPGSS_HFT_2023241.Wpfclient" 
         xmlns:local1="clr-namespace:TQPGSS_HFT_2023241.Wpfclient.ViewModels"
         mc:Ignorable="d"
-        Title="DriverWindow" Height="450" Width="800">
+        Title="DriverWindow" Height="574" Width="800">
     <Window.DataContext>
         <local1:DriverWindowViewModel/>
     </Window.DataContext>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="249*"/>
+            <ColumnDefinition Width="151*"/>
             <ColumnDefinition Width="151*"/>
         </Grid.ColumnDefinitions>
         <ListBox ItemsSource="{Binding Drivers}" HorizontalContentAlignment="Stretch" SelectedItem="{Binding SelectedDriver}">
@@ -35,6 +36,39 @@
             <Button Content="Add Driver" Command="{Binding CreateDriverCommand}" Margin="10" Padding="10"></Button>
             <Button Content="Delete Driver" Command="{Binding DeleteDriverCommand}" Margin="10" Padding="10"></Button>
             <Button Content="Update Driver" Command="{Binding UpdateDriverCommand}" Margin="10" Padding="10"></Button>
+            <Button Command="{Binding DriverWinsCommand}" Content="Driver Wins" Margin="10" Padding="10"></Button>
+            <Button Command="{Binding AvaragePointsPerGrandPrixesDriverCommand}" Content="Avarage points per grand prixes" Margin="10" Padding="10"></Button>
+            <Button Command="{Binding WhoWonTheMostCommand}" Content="Who won the most grand prix" Margin="10" Padding="10"></Button>
+            <Button Command="{Binding VisszaCommand}" Content="Listázások törlése" Background="IndianRed" Margin="10" Padding="10"></Button>
         </StackPanel>
+        <Grid Grid.Column="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+            </Grid.RowDefinitions>
+            <ListBox Grid.Row="0" ItemsSource="{Binding NonCrudListWins}" HorizontalContentAlignment="Stretch">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Label Content="{Binding Circuits}"></Label>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+            <ListBox Grid.Row="1" ItemsSource="{Binding NonCrudListAvg}" HorizontalContentAlignment="Stretch">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Label Content="{Binding Points}"></Label>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+            <ListBox Grid.Row="2" ItemsSource="{Binding NonCrudListMostwins}" HorizontalContentAlignment="Stretch">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Label Content="{Binding Name}"></Label>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+        </Grid>
+        
     </Grid>
 </Window>
