--- a/TQPGSS_HFT_2023241.Wpfclient/GrandPrixWindow.xaml
+++ b/TQPGSS_HFT_2023241.Wpfclient/GrandPrixWindow.xaml
@@ -5,13 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TQPGSS_HFT_2023241.Wpfclient" xmlns:local1="clr-namespace:TQPGSS_HFT_2023241.Wpfclient.ViewModels"
         mc:Ignorable="d"
-        Title="GrandPrixWindow" Height="450" Width="800">
+        Title="GrandPrixWindow" Height="568" Width="800">
     <Window.DataContext>
         <local1:GrandPrixWindowViewModel/>
     </Window.DataContext>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="249*"/>
+            <ColumnDefinition Width="151*"/>
             <ColumnDefinition Width="151*"/>
         </Grid.ColumnDefinitions>
         <ListBox ItemsSource="{Binding GrandPrixs}" HorizontalContentAlignment="Stretch" SelectedItem="{Binding SelectedGrandPrix}">
@@ -37,6 +38,35 @@
             <Button Content="Add GrandPrix" Command="{Binding CreateGrandPrixCommand}" Margin="10" Padding="10"></Button>
             <Button Content="Delete GrandPrix" Command="{Binding DeleteGrandPrixCommand}" Margin="10" Padding="10"></Button>
             <Button Content="Update GrandPrix" Command="{Binding UpdateGrandPrixCommand}" Margin="10" Padding="10"></Button>
+            <Button Content="Winner of the circuit" Command="{Binding WinnerOfTheCircuitCommand}" Margin="10" Padding="10"></Button>
+            <Button Content="Grand Prix details" Command="{Binding CircuitDetalisCommand}" Margin="10" Padding="10"></Button>
+            <Button Command="{Binding VisszaCommand}" Content="Listázások törlése" Background="IndianRed" Margin="10" Padding="10"></Button>
         </StackPanel>
+        <Grid Grid.Column="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+
+            </Grid.RowDefinitions>
+            <ListBox Grid.Row="0" ItemsSource="{Binding WinnerNonCrud}" HorizontalContentAlignment="Stretch">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Label Content="{Binding Name}"></Label>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+            <ListBox Grid.Row="1" ItemsSource="{Binding CircuitNonCrud}" HorizontalContentAlignment="Stretch">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel>
+                            <Label Content="{Binding id}"></Label>
+                            <Label Content="{Binding name}"></Label>
+                            <Label Content="{Binding date}"></Label>
+                            <Label Content="{Binding winner}"></Label>
+                        </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+        </Grid>
     </Grid>
 </Window>
